--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
 .menubar {
     order: 2;
     display: flex;
-    margin-right: 30px;
+    margin-right: 3rem;
 }
 
 .menubar li {
@@ -169,20 +169,18 @@ body {
 .pizza-menu-container {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px 0;
+    padding: 30px;
 }
 
 .pizza-menu-container img {
-    width: 60%;
-    border-radius: 50%;
-}
-
-.pizza-menu-container img::after {
-    content: '';
-    padding-bottom: 100%;
     display: block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    max-width: 100%;
 }
-
 
 .pizza-menu-item {
     display: flex;
@@ -190,8 +188,139 @@ body {
     justify-content: space-evenly;
     margin-bottom: 3rem;
 }
+.pizza-description {
+    margin: auto 1.5rem;
+}
 
+.pizza-title {
+    font-size: 1.2rem;
+}
 
+.pizza-description p {
+    font-size: 1rem;
+}
+
+.pizza-price {
+    color: red;
+}
+
+/* bookings */
+
+#bookings {
+    color: #fff;
+    letter-spacing: 1px;
+    width: 100%;
+    max-width: 100%;
+}
+
+.container {
+    background-color: rgb(220, 220, 220);
+    box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.1);
+    display: grid;
+    gap: 1rem;
+}
+
+.container-time {
+    background-color: rgba(0, 0, 0, 0.95);
+    padding: 50px;
+    outline: 3px dashed #998100;
+    outline-offset: -30px;
+    text-align: center;
+}
+
+.heading {
+    font-size: 2.4rem;
+}
+
+.heading-days {
+    color: #998100;
+    font-size: 1.2rem;
+}
+
+hr {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.container-form {
+    padding: 50px;
+    margin: 0 auto;
+    color: #000;
+    max-width: 100%;
+    text-align: center;
+}
+
+form {
+    display: grid;
+    row-gap: 20px;
+}
+
+.form-field {
+    display: flex;
+    justify-content: space-between;
+}
+
+input, select {
+    padding: 10px 15px;
+}
+
+.btn {
+    background-color: rgba(0, 0, 0, 0.95);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    font-size: 1.2rem;
+    border-radius: 100px;
+    box-shadow: 8px 10px 12px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.btn:hover {
+    transform: scale(1.03);
+    box-shadow: 10px 12px 15px rgba(0, 0, 0, 0.3);
+}
+
+/* footer */
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+/* Confirmation.html page */
+
+.confirmation {
+    background: url(../images/confirmation.webp) no-repeat center center;
+    background-size: cover;
+    color: #fff;
+    width: 100%;
+    max-width: 100%;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.yes {
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6rem;
+}
 
 
 @media screen and (max-width: 640px) {
@@ -199,5 +328,11 @@ body {
       width: 100%;
     }
 
-}
+    .menubar > li {
+        font-size: .9rem;
+    }
 
+    .logo {
+        font-size: 1rem;
+    }
+}
